--- a/templates/common/job-details.html
+++ b/templates/common/job-details.html
@@ -47,7 +47,7 @@
                     <p><strong>Job Type:</strong> Full-Time</p>
 
                     <!-- Apply Button -->
-                    <a href="" class="btn btn-warning rounded-pill text-dark shadow-sm mt-3">Apply
+                    <a href="{% url 'applyPage' %}" class="btn btn-warning rounded-pill text-dark shadow-sm mt-3">Apply
                         Now</a>
 
                     <!-- Back to Listings Button -->
