--- a/templates/job_seeker/preview-resume.html
+++ b/templates/job_seeker/preview-resume.html
@@ -152,8 +152,8 @@
                     </div>
 
                     <h5 class="card-title text-center">Creative Layout</h5>
-                    <img src="path_to_model3_image.jpg" alt="Creative Layout" class="img-fluid mb-3">
-                    <a href="" class="btn btn-warning btn-block">Use Creative
+                    <img src="{% static 'img/creative-layout.jpg' %}" alt="Creative Layout" class="img-fluid mb-3">
+                    <a href="{% url 'creativeLayout' %}" class="btn btn-warning btn-block">Use Creative
                         Layout</a>
                 </div>
             </div>
