--- a/templates/job_seeker/create-resume.html
+++ b/templates/job_seeker/create-resume.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h2 class="text-center mb-4">Create Resume</h2>
+    <h2 class="text-center mb-4">Add Basic Information</h2>
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow-lg p-4">
