--- a/templates/job_seeker/create-resume.html
+++ b/templates/job_seeker/create-resume.html
@@ -17,41 +17,57 @@
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="firstName">First Name</label>
-                        <input type="text" class="form-control" id="firstName" name="first_name" value="John" required>
+                        <input type="text" class="form-control" id="firstName" name="first_name"
+                            value="{{user.first_name}}" required>
                     </div>
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" name="last_name" value="Doe" required>
+                        <input type="text" class="form-control" id="lastName" name="last_name"
+                            value="{{user.last_name}}" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" value="john@example.com"
+                        <input type="email" class="form-control" id="email" name="email" value="{{user.email}}"
                             required>
                     </div>
                     <div class="form-group">
                         <label for="designation">Designation</label>
                         <input type="text" class="form-control" id="designation" name="designation"
-                            value="Software Engineer" required>
+                            placeholder="Software Engineer" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="dob">Date of Birth</label>
+                        <input type="date" class="form-control" id="dob" name="dob" required>
                     </div>
                     <div class="form-group">
                         <label for="profilePicture">Profile Picture</label>
+
+                        {% if images %}
                         <div class="mb-3">
                             <img src="path_to_profile_picture.jpg" alt="Profile Picture" class="img-thumbnail"
                                 width="150">
                         </div>
+                        {% endif %}
+
                         <input type="file" class="form-control-file" id="profilePicture" name="profile_picture">
                     </div>
 
                     <div class="form-group">
                         <label for="phone">Phone Number</label>
-                        <input type="tel" class="form-control" id="phone" name="phone" value="+1 234 567 890" required>
+                        <input type="tel" class="form-control" id="phone" name="phone" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" id="address" name="address" required>
                     </div>
 
 
                     <div class="form-group">
                         <label for="careerSummary">Career Summary</label>
                         <textarea class="form-control" id="careerSummary" name="career_summary" rows="3"
-                            required>Highly motivated and results-driven software engineer with over 5 years of experience in developing scalable web applications.</textarea>
+                            required></textarea>
                     </div>
 
                     <button type="submit" class="btn btn-primary btn-block">Update Profile</button>
