--- a/templates/job_seeker/create-resume.html
+++ b/templates/job_seeker/create-resume.html
@@ -9,7 +9,13 @@
 
 {% block body %}
 <div class="container mt-5">
+
+    {% if basic_info %}
+    <h2 class="text-center mb-4">Update Basic Information</h2>
+    {% else %}
     <h2 class="text-center mb-4">Add Basic Information</h2>
+    {% endif %}
+
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card shadow-lg p-4">
@@ -33,19 +39,20 @@
                     <div class="form-group">
                         <label for="designation">Designation</label>
                         <input type="text" class="form-control" id="designation" name="designation"
-                            placeholder="Software Engineer" required>
+                            placeholder="Software Engineer" value="{{basic_info.designation}}" required>
                     </div>
 
                     <div class="form-group">
                         <label for="dob">Date of Birth</label>
-                        <input type="date" class="form-control" id="dob" name="dob" required>
+                        <input type="date" class="form-control" id="dob" name="dob"
+                            value="{{basic_info.date_of_birth|date:'Y-m-d'}}" required>
                     </div>
                     <div class="form-group">
                         <label for="profilePicture">Profile Picture</label>
 
-                        {% if images %}
+                        {% if basic_info.profile_pic %}
                         <div class="mb-3">
-                            <img src="path_to_profile_picture.jpg" alt="Profile Picture" class="img-thumbnail"
+                            <img src="/{{basic_info.profile_pic}}" alt="Profile Picture" class="img-thumbnail"
                                 width="150">
                         </div>
                         {% endif %}
@@ -55,19 +62,22 @@
 
                     <div class="form-group">
                         <label for="phone">Phone Number</label>
-                        <input type="tel" class="form-control" id="phone" name="phone" required>
+                        <input type="tel" class="form-control" id="phone" name="phone"
+                            value="{{basic_info.contact_number}}" required>
                     </div>
 
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" required>
+                        <input type="text" class="form-control" id="address" value="{{basic_info.address}}"
+                            name="address" required>
                     </div>
 
 
                     <div class="form-group">
                         <label for="careerSummary">Career Summary</label>
-                        <textarea class="form-control" id="careerSummary" name="career_summary" rows="3"
-                            required></textarea>
+                        <textarea class="form-control" id="careerSummary" name="career_summary"
+                            value="{{basic_info.career_summary}}" rows="3"
+                            required>{{basic_info.career_summary}}</textarea>
                     </div>
 
                     <button type="submit" class="btn btn-primary btn-block">Update Profile</button>
