--- a/templates/job_seeker/preview-resume.html
+++ b/templates/job_seeker/preview-resume.html
@@ -17,7 +17,7 @@
                 <img src="/{{basic_info.profile_pic}}" class="img-thumbnail" alt="Profile Picture" width="150">
                 <h3 class="mt-3">{{ user.get_full_name }}</h3>
                 <p class="text-muted">{{basic_info.designation}}</p>
-                <a href="" class="btn btn-outline-primary btn-sm mt-3">Edit Profile</a>
+                <a href="{% url 'updateBasicInfo' %}" class="btn btn-outline-primary btn-sm mt-3">Update Basic Info</a>
 
                 <!-- Applied Jobs Section -->
                 <div class="mb-4 mt-5">
@@ -31,7 +31,7 @@
                 <div class="mb-4">
                     <h4 class="d-flex justify-content-between align-items-center">
                         Career Summary
-                        <a href="/editCareerSummary" class="btn btn-outline-primary btn-sm">Edit</a>
+
                     </h4>
                     <p>
                         {{basic_info.career_summary}}
@@ -42,7 +42,7 @@
                 <div class="mb-4">
                     <h4 class="d-flex justify-content-between align-items-center">
                         Contact Information
-                        <a href="/editContactInfo" class="btn btn-outline-primary btn-sm">Edit</a>
+
                     </h4>
                     <p><strong>Email:</strong> {{user.email}}</p>
                     <p><strong>Phone:</strong> {{basic_info.contact_number}}</p>
