--- a/templates/job_seeker/add-education.html
+++ b/templates/job_seeker/add-education.html
@@ -84,7 +84,7 @@
         var fieldOfStudyText = document.getElementById('field_of_study_text');
         var fieldOfStudySelect = document.getElementById('field_of_study_select');
 
-        if (selectedOptionText === 'BSc' || selectedOptionText === 'Diploma' || selectedOptionText === 'MSc' || selectedOptionText === 'Doctorate(PhD)') {
+        if (selectedOptionText === "Bachelor's Degree" || selectedOptionText === 'Diploma' || selectedOptionText === "Master's Degree" || selectedOptionText === 'Doctorate(PhD)') {
             // Show dropdowns and hide text inputs for both fields
             institutionText.style.display = 'none';
             institutionText.required = false;
