captcha-api-fully-integrated

--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -45,7 +45,7 @@
 
     {% endblock body %}
 
-
+    {% include 'includes/footer.html' %}
     <script>
         {% for message in messages %}
         Swal.fire({
