--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,43 @@
+/* Login Page */
+.login-body,
+.password-reset-body {
+    background-color: #f8f9fa;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    /* Ensures it occupies full height */
+    margin: 0;
+    /* Prevents overflow */
+}
+
+.login-container {
+    width: 100%;
+    max-width: 400px;
+    /* Limits width for better fit */
+    padding: 20px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    /* Adds a subtle shadow */
+}
+
+/* Password Reset */
+.password-reset-container {
+    width: 100%;
+    max-width: 400px;
+    padding: 20px;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.password-reset-container h2 {
+    text-align: center;
+}
+
 .fix-logo {
     display: flex;
     justify-content: center;
@@ -52,9 +92,6 @@
     color: #6f42c1;
     margin-right: 8px;
 }
-
-
-
 
 
 
