--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -9,34 +9,10 @@
     <title>Login Page</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2fba3f7a77.js" crossorigin="anonymous"></script>
-
-    <style>
-        body {
-            background-color: #f8f9fa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            /* Ensures it occupies full height */
-            margin: 0;
-            /* Prevents overflow */
-        }
-
-        .login-container {
-            width: 100%;
-            max-width: 400px;
-            /* Limits width for better fit */
-            padding: 20px;
-            border: 1px solid #ced4da;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            /* Adds a subtle shadow */
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body>
+<body class="login-body">
 
     <div class="login-container">
         <img src="{% static 'img/logo-colorful.jpg' %}" alt="Profile Picture" class="img-fluid rounded-circle"
@@ -63,11 +39,14 @@
                         </span>
                     </div>
                 </div>
+                <div class="text-right mt-2">
+                    <a href="{% url 'forgetPassword' %}" class="small">Forgot Password?</a>
+                </div>
             </div>
-
 
             <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
+
         <div class="text-center mt-3">
             <small>Haven't any account? <a href="{% url 'registerPage' %}">Register here</a></small>
         </div>
@@ -77,7 +56,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
-
 
 </body>
 
